--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <title>Document</title>
     <style>
         body{
             height: 5000px;
-            width: 2000px;
+            width: 1100px;
         }
+
         button{
             border: none;
             border-radius: 4px;
@@ -20,11 +22,65 @@
             right: 10px;
             display: none;
         }
+
+        ul{
+            padding: 0;
+            margin: 0;
+            background-color: #ddd;
+            margin: 20px auto;
+            padding: 20px;
+            width: 400px;
+            list-style: none;
+            display: flex;
+            justify-content: space-between;
+        }
+
+        ul li{
+            width: 60px;
+            height: 60px;
+            border: 2px solid transparent;
+            opacity: 0.4;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+
+        ul li:first-child{
+            background-color: red;
+        }
+        ul li:nth-child(2){
+            background-color: green;
+        }
+        ul li:nth-child(3){
+            background-color: blue;
+        }
+
+        ul li:nth-child(4){
+            background-color: black;
+        }
+        .exp{
+            background-color: red;
+            width: 600px;
+            height: 300px;
+            margin: 20px auto;
+        }
+
+
     </style>
 </head>
 <body>
 
-    <button>Up</button>
+<ul>
+    <li data-color="red" class="active"></li>
+    <li data-color="green"></li>
+    <li data-color="blue"></li>
+    <li data-color="black"></li>
+</ul>
+
+<div class="exp"></div>
+<button>Up</button>
+
+
+
     <script>
         let btn = document.getElementsByTagName("button")[0];
         window.onscroll= function(){
@@ -48,6 +104,29 @@
             )
         }
         
+        let div2 = document.getElementsByTagName("div")[0];
+        let lis = document.querySelectorAll("ul li");
+
+        if(window.localStorage.getItem("color")){
+            div2.style.backgroundColor=localStorage.getItem("color");
+            lis.forEach((li)=>{
+                    li.classList.remove("active");
+                    });
+            document.querySelector(`[data-color="${localStorage.getItem("color")}"]`).classList.add("active");
+        }
+
+
+    
+        lis.forEach((li)=>{
+            li.addEventListener("click",(e)=>{
+                lis.forEach((li)=>{
+                    li.classList.remove("active");
+                    });
+                e.currentTarget.classList.add("active");
+                window.localStorage.setItem("color",e.currentTarget.dataset.color);
+                div2.style.backgroundColor=localStorage.getItem("color");
+            });
+        })
     </script>
 </body>
 </html>
